# FiftyOneDemo

./: .gitignore  LICENSE  demo_cifar.py  demo_coco.py  demo_quickstart.py  demo_voc.py  pyproject.toml
