[tool.poetry]
name = "fiftyonedemo"
version = "0.1.0"
description = "Simple demonstration of the library fiftyone"
authors = ["jmojoo <jaymojew@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fiftyone = "^0.18.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
ipython = "^8.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
