[tool.poetry]
name = "fiftyonedemo"
version = "0.1.0"
description = "Simple demonstration of the library fiftyone"
authors = ["jmojoo <jaymojew@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
kaleido = "0.2.1"
fiftyone = "^0.18.0"
torch = "^1.12.1"
torchvision = "^0.13.1"
pycocotools = "^2.0.6"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
ipython = "^8.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
